Include .rodata size in avr-objdump -P mem-usage.

PR 31687